# tux

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  cspell.json
.github/workflows/: rust.yml
tux/: Cargo.toml
tux/src/: assert_panic.rs  data.rs  diff.rs  exec.rs  lib.rs  server.rs  temp.rs  testdata.rs  text.rs
tux/src/diff/: lcs.rs  lines.rs  mod.rs
tux/src/text/: join_lines.rs  lines.rs  mod.rs  trim.rs
tux/tests/: test_testdata.rs
tux/tests/testdata/empty/: no-tests.txt
tux/tests/testdata/failing/: fail.input  fail.valid
tux/tests/testdata/many/a/: 02.valid
tux/tests/testdata/many/b/: 01.input  02.valid
tux/tests/testdata/many/c/sub/: some.input
tux_testbed/: Cargo.toml
tux_testbed/src/: README.md  bin_simple.rs  bin_testdata.rs  bin_with_error.rs
tux_testbed/tests/: data_tests.rs  exe_tests.rs  exec_tests.rs  temp_tests.rs  test_asserts.rs  test_exec.rs  test_temp.rs  test_testdata.rs  testdata_tests.rs
tux_testbed/tests/testdata/failed_diff/: test1.input  test2.input  test2.valid
