[package]
name = "tux"
version = "0.1.1"
edition = "2021"
description = "Test utilities for unit and integration tests"
license = "MIT"
repository = "https://github.com/ax-lab/tux"
readme = "../README.md"
keywords = ["tests", "unit-tests"]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
path-clean = { version = "0.1" }
tempfile = { version = "3" }
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3"}

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
